--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,9 +9,9 @@
 	.row
 	.col.s8.offset-s2
 		- if params[:mixtape_id]
-			= react_component 'MySongIsHome', { current_user: current_user, mixtape_id: params[:mixtape_id] }
+			= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: params[:mixtape_id] }
 		- else
-			= react_component 'MySongIsHome', { current_user: current_user, mixtape_id: @mixtape_id }
+			= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id }
 		
 	%img{:alt => "My QR code", :src => @qr}
 	%a.moove.bigger{:href => "home#index"} Mixtape
