--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,7 @@
 = render 'layouts/navbar'
+%body.home-body
 %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
-%div.socialright.cyan#me
+%div.socialright#me
 	%h6.black-text.center.salt.foont.buttonvw #{current_user.name}
 	- if current_user.picture == nil
 	- else
