--- a/app/views/static_pages/faq.html.haml
+++ b/app/views/static_pages/faq.html.haml
@@ -8,7 +8,7 @@
 %br
 %br
 %body.bck
-.container
+.container.five
   .card.container
     %h4.tit.center-align How does this whole thing work?
     %p.graph.center T-Mix works by using an existing API to locate song that you want to listen to and play them for you.  This API that we use with our App scours all the websites that host radio broadcast. With these two sources we can bring all kinds of music to you via the internet.
