--- a/app/views/static_pages/topsongs.html.haml
+++ b/app/views/static_pages/topsongs.html.haml
@@ -1,6 +1,6 @@
 .row
   = image_tag('real_b.png', :class =>"one image")
-  %a#about-us.bigger.image.white-text.stroke{:href => "/"} Home
+  %a#about-us.bigger.image.white-text.stroke.text-glow-hover{:href => "/"} Home
 %h3.salt.center.rel.white-text.stroke MySong.is
 %body.bck
 .imageback
