--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,7 @@
 .container
-	-if current_user.id == @user.id
-		%h1 mysong.is/#{@user.username}
+	%a{:href => "static_pages/topsongs"} Top Songs
+	=link_to "Log out", destroy_user_session_path, :method => :delete
+	-if current_user == nil || current_user.id != @user.id
 	-else
 		%h1 mysong.is/#{@user.username}
 
@@ -15,7 +16,10 @@
 		
 	%img{:alt => "My QR code", :src => @qr}
 	%a.moove.bigger{:href => "home#index"} Mixtape
-	-if current_user.id == @user.id
+	-if current_user == nil || current_user.id != @user.id
+	-else
 		%a.moove.bigger{:href => "users_edit"} Edit
+
+
 
 .sam= react_component 'Player'
