--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <%= image_tag('real_b.png', :class =>"one image") %>
+        <div class="one image"><%= image_tag("real_b.png", id: "img") %></div>
+  </div>
 </div>
 <h3 class="salt center rel white-text stroke">
   <strong>
