--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
-        <div class="one image"><%= image_tag("real_b.png", id: "img") %></div>
-  </div>
+  <%= image_tag('real_b.png', :class =>"one image") %>
 </div>
 <h3 class="salt center rel white-text stroke">
   <strong>
