some visual changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -216,7 +216,7 @@ $secondary-color: #DE429B !default;
 }
 
 .white-text a {
-  color:purple;
+  color:cyan;
 }
 
 .fourvw{
@@ -365,7 +365,7 @@ position: absolute;
   vertical-align: left;
   z-index: 10;
   bottom: 0px;
-  border: 4px solid purple;
+  border: 4px solid cyan;
   left: 26%;
   /*height: 100px;*/
   /*vertical-align: left;*/
