--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,10 @@ $secondary-color: #DE429B !default;
   background-image: url("assets/titled.png");
 }
 
+.btn {
+  background-color: DarkTurquoise;
+}
+
 .nav-color{
   background-color:#4DBAB8;
 }
