--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,13 +34,8 @@
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
     <div class="actions center">
-      <button class="btn waves-effect waves-light"><%= f.submit "Submit" %></button>
+      <button class="btn waves-effect waves-light"><%= f.submit "Sign Up" %></button>
       <!-- <button class="btn mix-color waves-effect waves-light">Back</button> -->
     </div>
   <% end %>
