--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
 .row
   = image_tag('real_b.png', :class =>"one image")
   %a.home-link.bigger.image.white-text.stroke.text-glow-hover{:href => "/static_pages/topsongs"} Top Songs
-  =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log second"
+  =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
 %h3.salt.center.rel.white-text.stroke MySong.is
 / .row
 /   = image_tag('real_b.png', :class =>"one image")
