added profile pictures

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,7 +18,7 @@
 	-else
 	%img{:alt => "My QR code", :src => @qr}
 
-
+	= link_to("Edit Profile", users_edit_path)
 
 	.sam= react_component 'Player'
 	%br
