topsongs on show page and page more formatted

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,25 @@ $secondary-color: #DE429B !default;
   background-image: url("assets/titled.png");
 }
 
+.ply {
+  padding: 1px 10px 6px 10px;
+  margin-right: 7px;
+}
+
+.pooop{
+  padding: 0.003% 10px 8px 5px;
+  margin-bottom: 10px;
+  background-color: DarkTurquoise;
+}
+
+.hi {
+  height: 45px;
+}
+
+.teot {
+ font-size:15px;
+}
+
 .btn {
   background-color: DarkTurquoise;
 }
