profile pictures working dynamically, qr code moved into right place

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,8 @@ $secondary-color: #DE429B !default;
   background-image: url("assets/titled.png");
 }
 
+
+
 .ply {
   padding: 1px 10px 6px 10px;
   margin-right: 7px;
@@ -572,6 +574,10 @@ body {
 
 .border {
  border: 80px solid grey;
+}
+
+.borderr {
+  border: 20px solid darkturquoise;
 }
 
 .bigger {
