ok now formatted correctly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,7 +31,7 @@ $secondary-color: #DE429B !default;
 .pooop{
   padding: 0.003% 10px 8px 5px;
   margin-bottom: 10px;
-  background-color: DarkTurquoise;
+  background-color: white;
 }
 
 .hi {
@@ -574,6 +574,11 @@ body {
 
 .border {
  border: 80px solid grey;
+}
+
+.backround {
+  background-color: darkturquoise;
+  color: white;
 }
 
 .borderr {
