--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,15 +21,25 @@ $secondary-color: #DE429B !default;
   background-image: url("assets/titled.png");
 }
 
+.subtitler {
+  font-size: 4.5vw!important;
+}
 
+.subti {
+  font-size: 1.25vw!important;
+}
+
+.subtitlez {
+  font-size: 1.42vw!important;
+}
 
 .ply {
-  padding: 1px 10px 6px 10px;
+  padding: 0.1px 10px 6px 10px;
   margin-right: 7px;
 }
 
 .pooop{
-  padding: 0.003% 10px 8px 5px;
+  padding: 0.017px 10px 8px 5px;
   margin-bottom: 10px;
   background-color: white;
 }
