--- a/app/views/static_pages/topsongs.html.haml
+++ b/app/views/static_pages/topsongs.html.haml
@@ -7,7 +7,7 @@
   %br
   %br
   .z-depth-5
-  .center
+  .center.container
     = react_component 'TopSongs'
     .sam= react_component 'Player'
   %br
