--- a/app/views/mixtapes/show.html.haml
+++ b/app/views/mixtapes/show.html.haml
@@ -11,7 +11,7 @@
 							%span By:
 							%span
 								= song.artist
-							%button.btn.inlin.flo Play
+							%button.btn.inner.flo Play
 %img{:alt => "My QR code", :src => @qr}
 
 
