--- a/app/views/mixtapes/show.html.haml
+++ b/app/views/mixtapes/show.html.haml
@@ -8,7 +8,7 @@
 						%h5.inline 
 							%span 
 								= song.name
-							%span By:
+							%span
 							%span
 								= song.artist
 							%button.btn.inlin.flo Play
