--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -18,6 +18,8 @@
   = image_tag('real_b.png', :class =>"one image")
   =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
   =link_to "Edit Profile", users_edit_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
+%h5.log.rel mysong.is/#{@user.username}
+
 %h3.salt.rel.white-text.stroke MySong.is
 / .row
 /   = image_tag('real_b.png', :class =>"one image")
