--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,15 +2,36 @@
 %body.home-body
 
 .container
-	-if current_user == nil || current_user.id != @user.id
+	-if current_user == nil
+		.rightbot.home-link.bigger.image.white-text.stroke.text-glow-hover.log
+			= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f|
+				.row
+					.col.s4
+						= f.text_field :email,
+							:value => "Email",
+							:style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+							:onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+							:color => "white",
+							:onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+					.col.s4
+						= f.text_field :password,
+							:value => "Password",
+							:autocomplete => "off",
+							:style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+							:onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
+							:onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
+					.col.s4
+						= f.submit "Log in", :class => 'btn black-text teal lighten-4'
 	-else
 
 .row
 	.col.s8
 		-if current_user == nil || current_user.id != @user.id
+			/ include picture
 		-else
 			%div
 				- if current_user.picture == nil
+					/ include picture
 				- else
 					%img.nav-profile-pic.borderr.z-depth-3{alt: "profile_pic", src: @img, height: 200, width: 200}
 				-if current_user.picture == nil
