--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -18,8 +18,8 @@
   = image_tag('real_b.png', :class =>"one image")
   %a.home-link.bigger.image.white-text.stroke.text-glow-hover{:href => "/static_pages/topsongs"} Top Songs
   =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
-  =link_to "Edit Profile", users_edit_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
-%h3.salt.center.rel.white-text.stroke MySong.is
+  =link_to "Edit Profile", users_edit_path, :class => "home-link bigger roight image white-text stroke text-glow-hover log"
+%h3.salt.center.rel.white-text.stroke.override MySong.is
 / .row
 /   = image_tag('real_b.png', :class =>"one image")
 /   %a#about-us.bigger.image.white-text.stroke{:href => "/static_pages/bio"} About Us
