--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,4 +1,18 @@
 
+/ %nav
+/   .nav-wrapper.z-depth-3.bott
+/     %ul#nav-mobile.right
+/       %li
+/         %a.bigger{:href => "/static_pages/bio"} About Us
+/       %li
+/         %a.bigger{:href => "/static_pages/topsongs"} Top Songs
+/       %li
+/         %a#FAQ.bigger{:href => "/static_pages/faq"} FAQ
+/       %li
+        
+
+
+
 #nav
   .contents
     .container
@@ -23,12 +37,11 @@
               .col.s4
                 = f.submit "Log in", :class => 'btn black-text teal lighten-4'
       -else
-        .row
-          = image_tag('real_b.png', :class =>"one image")
-          .nav-button
+        #login-container
+          .nav-button#logout-button
             =link_to "Log out", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
-          .nav-button
-            =link_to "Edit Profile", edit_user_registration_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
+          .nav-button#edit-profile-button
+            =link_to "Edit Profile", users_edit_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
 
     - if current_user != nil
       - if current_user.picture == nil
